fix color schemeing for dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -4,19 +4,13 @@
 
 body {
   min-height: 100vh;
-  background: radial-gradient(circle at var(--mouse-x, 50%) var(--mouse-y, 50%),
-      #dc8a78, #ea76cb, #8839ef, #1e66f5);
+  background: #181a1b; /* carbon.800 */
+  color: #000;
   background-attachment: fixed;
   transition: background 0.1s ease-out;
 }
 
 html.dark body {
-  background: radial-gradient(
-      circle at var(--mouse-x, 50%) var(--mouse-y, 50%),
-      #f2e9f3,
-      #e9d5ec,
-      #d8bee2,
-      #c9a4d9
-  );
+  background: #181a1b; /* carbon.800 */
   color: #000 !important;
 }
